# git-semindex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  context7.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  commitlint.yml  release-please.yml  release.yml
benches/: extraction_benchmark.rs
docs/: contributing.md  index.md  security.md
git_semindex/: __init__.py  indexer.py
src/: lib.rs
tests/: test_indexer.py  test_semindex.py
