[package]
name = "git_semindex"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_semindex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
git2 = { version = "0.20", default-features = false }
cap-std = "3.4.1"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "extraction_benchmark"
harness = false
