[package]
name = "git_semindex"
version = "0.1.0"
edition = "2021"

[lib]
name = "git_semindex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
git2 = { version = "0.21", default-features = false }
cap-std = "4.0.2"

[dev-dependencies]
criterion = "0.8.2"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "extraction_benchmark"
harness = false
